[tool.poetry]
name = "pyinvoke_tasks_example"
version = "0.1.0"
description = "An example of PyInvoke tasks"
authors = ["Phillip Dudley <Predatorian3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
